--- a/downloads/index.html
+++ b/downloads/index.html
@@ -79,7 +79,7 @@
                                 <div class="text-center">
                                     <i class="bi-windows icon-feature text-gradient d-block mb-3"></i>
                                     <h3 class="font-alt mb-3">Windows</h3>
-                                    <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="https://downloads.techmine.io/Windows/x64/latest/setup.exe" download>
+                                    <a class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" href="https://downloads.techmine.io/Windows/x64/latest/TechMine_Setup.exe" download>
                                         <span class="d-flex align-items-center"><span class="small">x64 setup.exe Download</span></span>
                                     </a>
                                 </div>
@@ -120,7 +120,7 @@
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 mb-3">
-                                <div class="text-center"><img class="app-badge" src="/assets/img/app-store-badge.svg" alt="..." style="opacity: 0.5" /></div>
+                                <div class="text-center"><img class="app-badge" src="/assets/img/app-store-badge-coming-soon.svg" alt="..." /></div>
                             </div>
                         </div>
                         <br />
