--- a/contact/index.html
+++ b/contact/index.html
@@ -77,19 +77,19 @@
                                     <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                                         <!-- Name input-->
                                         <div class="form-floating mb-3">
-                                            <input class="form-control" id="name" type="text" placeholder="Enter your name..." name="Name" />
+                                            <input class="form-control" id="nameContact" type="text" placeholder="Enter your name..." name="Name" />
                                             <label for="name">Full name</label>
                                         </div>
                                         <!-- Email address input-->
                                         <div class="form-floating mb-3">
-                                            <input class="form-control" id="email" type="email" placeholder="name@example.com" name="Email" />
+                                            <input class="form-control" id="emailContact" type="email" placeholder="name@example.com" name="Email" />
                                             <label for="email">Email address</label>
                                             <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
                                             <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
                                         </div>
                                         <!-- Message input-->
                                         <div class="form-floating mb-3">
-                                            <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" name="Message"></textarea>
+                                            <textarea class="form-control" id="messageContact" type="text" placeholder="Enter your message here..." style="height: 10rem" name="Message"></textarea>
                                             <label for="message">Message</label>
                                         </div>
                                         <div class="mb-3" id="captchaContact"></div>
